--- a/package.json
+++ b/package.json
@@ -6,17 +6,25 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.9",
+    "@syncfusion/ej2-react-calendars": "^24.2.5",
+    "@syncfusion/ej2-react-dropdowns": "^24.2.7",
+    "@syncfusion/ej2-react-grids": "^24.2.5",
+    "@syncfusion/ej2-react-inputs": "^24.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "crypto-js": "^4.2.0",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "react-use": "^17.5.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
